# encrypted_sql

./: Cargo.toml  README.md  Roadmap.md  sql.txt
db_dir/: table_1.csv  table_2.csv
src/: main.rs
src/database_server/: mod.rs
