[package]
name = "encrypt_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.31.0"
sqlparser = "0.46.0"
csv = "1.3.0"
serde_json = "1.0.116"


[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.6.1", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tfhe = { version = "0.6.1", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }